--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.4",
+    "fs": "^0.0.1-security",
+    "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sqlite": "^4.1.1",
     "sqlite3": "https://github.com/mapbox/node-sqlite3/tarball/master",
+    "uid": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
